[package]
name = "game_kernel"
version = "0.1.0"
authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
edition = "2018"

[dependencies]
wasmer-runtime = "0.14"
libloading = "0.6"
rental = "0.5"
futures = { version = "0.3", features = ["thread-pool"] }
anyhow = "1"
tokio-util = { version = "0.3", features = ["codec", "compat"] }
protocols = { path = "../protocols" }
loopback = { path = "../loopback" }
render = { path = "../render", features = ["host"] }
