[package]
name = "plugin_b"
version = "0.1.0"
authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
libplugin = { path = "../libplugin" }
tokio-util = { version = "0.3", features = ["codec", "compat"] }
nalgebra = { version = "0.20", features = ["serde-serialize"] }
bincode = "1.2"
