[package]
name = "render"
version = "0.1.0"
authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
edition = "2018"

[dependencies]
kiss3d = "0.23"
nalgebra = { version = "0.20", features = ["serde-serialize"] }
bincode = "1.2"
futures = "0.3"
loopback = { path = "../loopback" }
tokio-util = { version = "0.3", features = ["codec", "compat"] }
serde = { version = "1", features = ["derive"] }
