[package]
name = "render"
version = "0.1.0"
authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
edition = "2018"

[features]
host = ["kiss3d"]
demo = ["host", "loopback"]

[[bin]]
name = "render"
required-features = ["demo"]

[dependencies]
nalgebra = { version = "0.20", features = ["serde-serialize"] }
bincode = "1.2"
futures = "0.3"
tokio-util = { version = "0.3", features = ["codec", "compat"] }
serde = { version = "1", features = ["derive"] }

kiss3d = { version = "0.23", optional = true }
loopback = { path = "../loopback", optional = true }
